--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -14,16 +14,16 @@
     <header class="header">
         <div class="header__wrapper">
             <article class="header__bio">
-                <img src="../images/main__image.jpg" alt="main__image" class="header__image">
-                <div class="header__content-text">
-                    <h1 class="header__title">Осипов Сергей</h1>
-                    <h2 class="header__desc">Front-end разработчик</h2>
+                <img src="../images/bio__image.jpg" alt="bio__image" class="header__bio-image">
+                <div class="header__bio-content">
+                    <h1 class="header__bio-title">Осипов Сергей</h1>
+                    <h2 class="header__bio-desc">Front-end разработчик</h2>
                 </div>
             </article>
             <nav class="header__navigation">
-                <div class="header__navigation__items">
-                    <a href="#bio" class="header__navigation__item">Кое-что обо мне</a>
-                    <a href="#projects" class="header__navigation__item">Кое-что сделал</a>
+                <div class="header__navigation-items">
+                    <a href="#bio" class="header__navigation-item">Кое-что обо мне</a>
+                    <a href="#projects" class="header__navigation-item">Кое-что сделал</a>
                 </div>
             </nav>
         </div>
@@ -47,28 +47,28 @@
                     </p>
                     <ul class="main__list">
                         <li class="main__list-item main__list-item_html">
-                            <span class="main__list-item__text">HTML 5</span>
+                            <span class="main__list-item-text">HTML 5</span>
                         </li>
                         <li class="main__list-item main__list-item_css">
-                            <span class="main__list-item__text">CSS (LESS)</span>
+                            <span class="main__list-item-text">CSS (LESS)</span>
                         </li>
                         <li class="main__list-item main__list-item_js">
-                            <span class="main__list-item__text">Vanilla JS</span>
+                            <span class="main__list-item-text">Vanilla JS</span>
                         </li>
                         <li class="main__list-item main__list-item_vuejs">
-                            <span class="main__list-item__text">VueJS</span>
+                            <span class="main__list-item-text">VueJS</span>
                         </li>
                         <li class="main__list-item main__list-item_webpack">
-                            <span class="main__list-item__text">Webpack</span>
+                            <span class="main__list-item-text">Webpack</span>
                         </li>
                         <li class="main__list-item main__list-item_gulp">
-                            <span class="main__list-item__text">Gulp</span>
+                            <span class="main__list-item-text">Gulp</span>
                         </li>
                         <li class="main__list-item main__list-item_tt">
-                            <span class="main__list-item__text">Template Toolkit</span>
+                            <span class="main__list-item-text">Template Toolkit</span>
                         </li>
                         <li class="main__list-item main__list-item_bem">
-                            <span class="main__list-item__text">BEM</span>
+                            <span class="main__list-item-text">BEM</span>
                         </li>
                     </ul>
                     <p class="main__text">
@@ -119,14 +119,14 @@
     </main>
     <footer class="footer">
         <div class="footer__wrapper">
-            <article class="social">
-                <a class="social__link" href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="social__icon"></a>
-                <a class="social__link" href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="social__icon"></a>
-                <a class="social__link" href="https://www.instagram.com/osipov__s"><img src="../images/icons/instagram.svg" alt="instagram" class="social__icon"></a>
-                <a class="social__link" href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/mail.svg" alt="mail" class="social__icon"></a>
+            <article class="footer__social">
+                <a class="footer__social-link" href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="https://www.instagram.com/osipov__s"><img src="../images/icons/instagram.svg" alt="instagram" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/mail.svg" alt="mail" class="footer__social-icon"></a>
             </article>
-            <article class="metric" id="social">
-                <span class="metric__text">Какие-либо метрики на сайте отсутствуют.</span>
+            <article class="footer__metric">
+                <span class="footer__metric-text">Какие-либо метрики на сайте отсутствуют.</span>
             </article>
         </div>
     </footer>
