--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -51,7 +51,7 @@
 
     &__bio-title {
         padding-bottom: 6px;
-        margin: 0;
+        margin: 0 auto;
         .font('Raleway-Thin', 24px, 600, normal);
     }
 
