Add folders for social and technologies icons

--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -9,7 +9,7 @@
 
     &_@{item} {
         list-style: none;
-        background: url('../../images/icons/@{item}.svg') no-repeat;
+        background: url('../../images/icons/technologies/@{item}.svg') no-repeat;
         background-size: contain;
         padding-left: 36px;
     }
