--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -120,10 +120,10 @@
     <footer class="footer">
         <div class="footer__wrapper">
             <article class="footer__social">
-                <a class="footer__social-link" href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="footer__social-icon"></a>
-                <a class="footer__social-link" href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="footer__social-icon"></a>
-                <a class="footer__social-link" href="https://www.instagram.com/osipov__s"><img src="../images/icons/instagram.svg" alt="instagram" class="footer__social-icon"></a>
-                <a class="footer__social-link" href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/mail.svg" alt="mail" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="https://github.com/osipovsergey"><img src="../images/icons/social/github.svg" alt="github" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="https://twitter.com/osipov__s"><img src="../images/icons/social/twitter.svg" alt="twitter" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="https://www.instagram.com/osipov__s"><img src="../images/icons/social/instagram.svg" alt="instagram" class="footer__social-icon"></a>
+                <a class="footer__social-link" href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/social/mail.svg" alt="mail" class="footer__social-icon"></a>
             </article>
             <article class="footer__metric">
                 <span class="footer__metric-text">Какие-либо метрики на сайте отсутствуют.</span>
